projects/lets-eat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicd-practice
  template:
    metadata:
      labels:
        app: cicd-practice
    spec:
      containers:
      - name: my-container
        image: geunsam2/cicd-practice:latest
        ports:
        - containerPort: 3000
