projects/lets-eat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-practice
spec:
  ingressClassName: "nginx"
  rules:
  - host: lets-eat.geunsam2.xyz # 도메인 주소 변경 요망
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
